# molga-engine

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  Window.cpp  imgui.ini  main.cpp  scene.json  test_build.cpp
.serena/: project.yml
.serena/memories/: code_structure.md  project_overview.md  suggested_commands.md  tech_stack.md
molgaEngine/: molgaEngine.sln
molgaEngine/molgaEngine/: Application.cpp  Application.h  Window.cpp  Window.h  main.cpp  molgaEngine.cpp  molgaEngine.h  molgaEngine.vcxproj  molgaEngine.vcxproj.filters  pch.cpp
molgaEngine/molgaTester/: Resource.h  molgaTester.cpp  molgaTester.rc  molgaTester.vcxproj  molgaTester.vcxproj.filters
src/: Animation.cpp  Animation.h  Audio.cpp  Audio.h  Camera2D.cpp  Camera2D.h  Collision.cpp  Collision.h  Input.cpp  Input.h  Particle.cpp  Particle.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  SpriteSheet.cpp  SpriteSheet.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  Tilemap.cpp  Tilemap.h  Time.cpp  Time.h  UI.cpp  UI.h  Window.h  main.cpp  runtime_main.cpp
src/Common/: Types.h
src/Core/: Application.cpp  Application.h  GameBuilder.cpp  GameBuilder.h  Project.cpp  Project.h  SceneSerializer.cpp  SceneSerializer.h  TextureManager.cpp  TextureManager.h
src/ECS/: Component.cpp  Component.h  GameObject.cpp  GameObject.h
src/ECS/Components/: BoxCollider2D.cpp  BoxCollider2D.h  SpriteRenderer.cpp  SpriteRenderer.h  Transform.cpp  Transform.h
src/Editor/: Editor.cpp  Editor.h  EditorState.cpp  EditorState.h  ImGuiLayer.cpp  ImGuiLayer.h  VSCodeIntegration.cpp  VSCodeIntegration.h
src/Editor/Windows/: EditorWindow.h  HierarchyWindow.cpp  HierarchyWindow.h  InspectorWindow.cpp  InspectorWindow.h  ProjectBrowserWindow.cpp  ProjectBrowserWindow.h  ProjectWindow.cpp  ProjectWindow.h  ScriptWindow.cpp  ScriptWindow.h
src/Platform/: Platform.cpp  Platform.h
src/Scenes/: GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h
src/Scripting/: BuiltinScripts.cpp  BuiltinScripts.h  Script.cpp  Script.h  ScriptCompiler.cpp  ScriptCompiler.h  ScriptManager.cpp  ScriptManager.h
src/Shaders/: default.frag  default.vert
